# master_test

install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/arm_moveit_config/share/arm_moveit_config/: package.sh
install/cobot_camera_moveit_config/share/cobot_camera_moveit_config/: local_setup.sh  package.sh
install/cobot_ik/lib/cobot_ik/: attach  pick_place  pick_place_fake_gripping  pick_place_link_attacher  process_points_stream  test_ik  test_pick_care  test_pick_care_waypoints
install/cobot_ik/share/cobot_ik/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  (+1 more)
log/: latest_build  latest_mixin
src/arm_moveit_config/config/: custom_robot.srdf  custom_robot.urdf.xacro
src/arm_moveit_config/launch/: demo.launch.py  move_group.launch.py
src/cobot_camera_moveit_config/: .setup_assistant  CMakeLists.txt
src/cobot_camera_moveit_config/config/: custom_robot.urdf.xacro  custom_robot_gazebo_moveit.urdf.xacro  moveit_controllers.yaml
src/cobot_camera_moveit_config/launch/: moveit_rviz.launch.py  rsp.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py
src/cobot_ik/: CMakeLists.txt  package.xml
src/cobot_ik/src/: attach.cpp  pick_place.cpp  pick_place_fake_gripping.cpp  pick_place_link_attacher.cpp  process_points_stream.cpp  test_ik.cpp  test_pick_care.cpp  test_pick_care_waypoints.cpp
src/ind_environment/: CMakeLists.txt
src/ind_environment/worlds/: pick_and_place_workplace_object.world
src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/log/: latest_build
src/six_arm/: CMakeLists.txt  package.xml
src/six_arm/config/: controllers.yaml
src/six_arm/launch/: spawn_robot_camera.launch.py  spawn_robot_camera_moveit.launch.py  spawn_robot_controllers.launch.py  spawn_robot_traj_controllers.launch.py
src/six_arm/urdf/: check.urdf  cobot.urdf.xacro  custom_robot_gazebo.xacro
src/six_arm_moveit_config/: CMakeLists.txt  package.xml
src/six_arm_moveit_config/config/: ompl_planning.yaml
src/six_arm_moveit_config/launch/: demo.launch.py  demo_try.launch.py  demo_try2.launch.py
(+141 files in other folders)
